# magnetic

./: .gitignore  DEVELOPER_GUIDE.md  README.md  ci.yml  eslint.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml
.windsurf/workflows/: deploy-docs-site.md
android/magnetic-sdk/: README.md  build.gradle.kts  consumer-rules.pro  settings.gradle.kts
apps/aerostat-form/: index.html
apps/bitbin-docs/: design.json  magnetic.json
apps/color-palette/: design.json  magnetic.json
apps/countdown-timer/: design.json  magnetic.json
apps/docs/: .gitignore  magnetic.json  netlify.toml
apps/infinite-scroll/: README.md
apps/plugin-runtime-docs/: magnetic.json  tsconfig.json
apps/quote-wall/: design.json  magnetic.json
apps/shipment-tracker/: design.json  magnetic.json  tsconfig.json
apps/task-board/: README.md  design.json  magnetic.json  plugin.ts  tsconfig.json  (+1 more)
contracts/: package.json
demo/: index.html  magnetic.js
deploy/: Caddyfile  README.md  control-plane.env.example  magnetic-control-plane.service  magnetic-platform.service  setup-node.sh
docs/: architecture.md  civo-deployment-plan.md  deployment-ops.md  fixes_log.md  future-crdt-ot.md  index.md  packages.md  roadmap.md  visual-builder-spec.md
ios/: .gitignore
rs/crates/magnetic-control-plane/: Cargo.toml
rs/crates/magnetic-control-plane/src/: auth.rs  caddy.rs  civo.rs  db.rs  error.rs  main.rs  server.rs
rs/crates/magnetic-v8-server/: Cargo.toml
rs/crates/magnetic-v8-server/assets/: magnetic.min.js
rs/crates/magnetic-v8-server/src/: data.rs  main.rs  platform.rs
rs/crates/magnetic-v8-server/src/auth/: mod.rs  oauth2.rs  session.rs
scripts/: checksum-codegen.js  demo.sh  golden-manifests.js
tools/: glass-configurator.html
(+152 files in other folders)
