[package]
name = "magnetic-control-plane"
version = "0.1.0"
edition = "2021"
description = "Magnetic Cloud control plane — app registry, auth, node management, deploy orchestration"

[[bin]]
name = "magnetic-control-plane"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
libsql = "0.6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
